fixes: fb share icon clipping & post date wrapping
- increases width for post body, too

--- a/app/stylus/mutants-layout.styl
+++ b/app/stylus/mutants-layout.styl
@@ -355,7 +355,7 @@ html.forum, html.profile, html.search, html.moderation
             display none
         .profile-container
           position absolute
-          width 160px
+          width 180px
           text-align right
           .user-title
             text-transform capitalize
@@ -387,7 +387,7 @@ html.forum, html.profile, html.search, html.moderation
               color #777
         .container
           position relative
-          margin-left 193px
+          margin-left 214px
           margin-bottom 35px
           padding 23px 30px 30px 35px
           border-bottom-right-radius 35px
@@ -474,7 +474,7 @@ html.forum, html.profile, html.search, html.moderation
             max-width 90px!important
           .fb_iframe_widget
             margin-right 16px!important
-            margin-top -3px!important
+            margin-top -1px!important
             vertical-align top
       .page-loaded:last-child, #listview div[data-infinity-pageid]
         padding-bottom (grid*4) !important
